
plugins {
    id "io.freefair.lombok" version "8.10.2"
    id 'java'
    id "maven-publish"
}

group = 'usdot.jpo.ode'

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.slf4j:slf4j-api:2.0.16'
    testImplementation 'org.slf4j:slf4j-simple:2.0.16'
    testImplementation 'org.hamcrest:hamcrest:3.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

test {
    jvmArgs(["--enable-native-access=ALL-UNNAMED"])
    systemProperty("jextract.trace.downcalls", "true")
    useJUnitPlatform()
    testLogging.showStandardStreams = true
}

